# tazunene_server

./: .gitignore  Cargo.toml  Makefile.toml  docker-compose.yml
migrations/: 20240601044955_init.down.sql  20240601044955_init.sql  20240601044955_init.up.sql
src/: main.rs
src/domains/: character.rs  infra_trait.rs  mod.rs
src/handlers/: chat_simple.rs  echo.rs  mod.rs  speak.rs  talk.rs
src/infrastructures/: mod.rs  open_ai_client.rs  repository.rs  voicevox_client.rs
src/usecases/: chat_service.rs  mod.rs  speak_service.rs
