[package]
name = "tazunene_server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
tokio = { version = "1.37.0", features = ["full"] }
dotenv = "0.15.0"
itertools = "0.13.0"
axum = "0.7.5"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
vvcore ={ version = "0.0.2"}
tower-http = { version = "0.5.2", features = ["cors"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
reqwest = { version = "0.12.4", features = ["blocking", "json"] }
url = "2.5.0"

[dev-dependencies]
mockito = "1.4.0"